--- a/SignalDemontration/Views/Home/Index.cshtml
+++ b/SignalDemontration/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+﻿<div class="container">
+    <div class="row">
+        <div class="col-3">Total Views:</div>
+        <div class="col-4">
+            <span id="totalViewsCounter"></span>
+        </div>
+    </div>
 </div>
+
+@* This Script Tag will Add Client Side Library Of SignalR Inside Our Index View *@
+<script src="~/lib/signalr/dist/browser/signalr.js"></script>
+
+@* Registering UserCount JS file *@
+<script src="~/js/userCount.js"></script>
