--- a/SignalDemontration/Views/Home/Index.cshtml
+++ b/SignalDemontration/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
 ﻿<div class="container">
+    @* This Row Will Show Total Views *@
     <div class="row">
         <div class="col-3">Total Views:</div>
         <div class="col-4">
             <span id="totalViewsCounter"></span>
+        </div>
+    </div>
+
+    @* This Row Will Show Total Users *@
+    <div class="row">
+        <div class="col-3">Total Users:</div>
+        <div class="col-4">
+            <span id="totalUsersCounter"></span>
         </div>
     </div>
 </div>
